tests/negative/gold/pkg_group_errors_in_pkg/with_package_warnings_test.gold
<pkg:target-1.0>/foo.toit:16:3: error: Method 'foo' with overlapping signature
  foo x y=499:
  ^~~
<pkg:target-1.0>/foo.toit:15:3: note: Overlaps with method 'foo'
  foo x:
  ^~~
<pkg:target-1.0>/foo.toit:17:3: note: Overlaps with method 'foo'
  foo x y=43 z=23:
  ^~~
<pkg:target-1.0>/foo.toit:17:3: error: Method 'foo' with overlapping signature
  foo x y=43 z=23:
  ^~~
<pkg:target-1.0>/foo.toit:15:3: note: Overlaps with method 'foo'
  foo x:
  ^~~
tests/negative/pkg_group_errors_in_pkg/with_package_warnings_test.toit:8:7: error: Missing implementations for interface methods
class A implements target.I1:
      ^
<pkg:target-1.0>/foo.toit:9:3: note: Missing implementation for 'foo'
  foo -> string
  ^~~
<pkg:target-1.0>/foo.toit:10:3: note: Missing implementation for 'bar'
  bar x y
  ^~~
<pkg:target-1.0>/foo.toit:12:7: error: Missing implementations for interface methods
class B implements I1:
      ^
<pkg:target-1.0>/foo.toit:9:3: note: Missing implementation for 'foo'
  foo -> string
  ^~~
<pkg:target-1.0>/foo.toit:10:3: note: Missing implementation for 'bar'
  bar x y
  ^~~
<pkg:target-1.0>/foo.toit:20:3: error: Ambiguous resolution of 'ambiguous'
  ambiguous
  ^~~~~~~~~
<pkg:target-1.0>/bar.toit:5:1: note: Resolution candidate for 'ambiguous'
ambiguous:
^~~~~~~~~
<pkg:target-1.0>/gee.toit:5:1: note: Resolution candidate for 'ambiguous'
ambiguous:
^~~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
Compilation failed.
